alignment issue fix in banner

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ html {
 #banner-background {
 	background-color: #000000;
 	width: 95%;
-	height: 10em;
+	height: 22em;
 	margin: 0 auto;
 }
 
